<resources>
	<string name="app_name">るみ鯖</string>
	<string name="login">ログイン</string>
	<string name="welcome">ようこそ</string>
	<string name="regist_account">アカウント作成</string>
	<string name="userid">ユーザーID</string>
	<string name="password">パスワード</string>
	<string name="home">ホーム</string>
	<string name="plzwait">お待ちください</string>
	<string name="top">トップ</string>
	<string name="setting">設定</string>
	<string name="open">開く</string>
	<string name="close">閉じる</string>
	<string name="username">ユーザー名</string>
	<string name="apply">適用</string>
	<string name="profile_edit">プロフィール編集</string>
</resources>