<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		<TextView
				android:text="@string/welcome"
				android:textSize="35sp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
		<Button
				android:text="@string/login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/login_account" />
		<Button
				android:text="@string/regist_account"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/regist_account" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>