<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="10sp">

		<!--ユーザーID-->
		<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/userid_input"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/userid"
					android:inputType="text" />
		</com.google.android.material.textfield.TextInputLayout>

		<!--パスワード-->
		<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			<com.google.android.material.textfield.TextInputEditText
					android:id="@+id/password_input"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/password"
					android:inputType="textPassword" />
		</com.google.android.material.textfield.TextInputLayout>

		<!--ログインボタン-->
		<Button
				android:text="@string/login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/login_button" />
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>